# secure-password-manager

./: .gitignore  CMakeLists.txt  SECURITY_REPORT.md  TEST_CASES.md  USER_MANUAL.md
docs/: README.md
src/: main.cpp
src/crypto/: crypto.cpp  crypto.hpp
src/logging/: logger.cpp  logger.hpp
src/storage/: vault.cpp  vault.hpp
src/ui/: cli.cpp  cli.hpp
src/validation/: input_validator.cpp  input_validator.hpp
tests/: CMakeLists.txt  test_main.cpp
